feat: アーティスト情報取得APIを呼び出し回数を削減